--- a/assignment_logic/pyproject.toml
+++ b/assignment_logic/pyproject.toml
@@ -1,13 +1,19 @@
 [tool.poetry]
-name = "assignment_logic"
+name = "assignment-logic"
 version = "0.1.0"
 description = ""
-authors = ["Mark Frankle <mark@frankle.fyi>"]
+authors = ["Mark <mark@mark.fyi>"]
+packages = [{ include = "assignment_logic", from = "src" }]
 
 [tool.poetry.dependencies]
 python = "^3.10"
 ortools = "^9.11.4210"
 
+[tool.poetry.dev-dependencies]
+pytest = "^7.0"        # For testing
+mypy = "^1.0"          # For type checking
+flake8 = "^6.0"        # For linting
+black = "^23.0"        # For formatting
 
 [build-system]
 requires = ["poetry-core"]
