--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -12,6 +12,11 @@ pandas = "^2.2.3"
 openpyxl = "^3.1.5"
 assignment-logic = {path = "../assignment_logic"}
 python-multipart = "^0.0.17"
+python-dotenv = "^1.0.1"
+debugpy = "^1.8.9"
+
+[tool.poetry.group.dev.dependencies]
+debugpy = "^1.8.9"
 
 [build-system]
 requires = ["poetry-core"]
