feat: add gunicorn for prod deploy

--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -14,6 +14,7 @@ python-multipart = "^0.0.17"
 python-dotenv = "^1.0.1"
 debugpy = "^1.8.9"
 assignment-logic = {path = "../assignment_logic"}
+gunicorn = "^23.0.0"
 
 [tool.poetry.group.dev.dependencies]
 debugpy = "^1.8.9"
