fix: add test dependencies and configuration
Added missing test infrastructure for both backend and frontend:

Backend Changes:
- Added pytest, pytest-cov, httpx to dev dependencies
- Updated poetry.lock with test packages
- Fixed deprecation warning (regex -> pattern in FastAPI Query)
- All 63 tests now run (61 passing, 2 minor mock issues)

Frontend Changes:
- Added Jest moduleNameMapper to craco.config.js for @/ alias
- Removed old boilerplate App.test.tsx
- Utility tests (15/15) now passing
- Component tests need minor mock adjustments (documented)

Documentation:
- Added TEST_SETUP.md with quick start guide
- Troubleshooting section for common issues
- Current status: Backend 96.8% passing, Frontend utils 100%

Run 'poetry run pytest' in /api to see 61 tests pass!
Run 'npm test -- --testPathPattern=recentUploads' in /frontend to see 15 tests pass!

See TEST_SETUP.md for complete instructions.

--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -21,6 +21,9 @@ assignment-logic = {path = "../assignment_logic"}
 
 [tool.poetry.group.dev.dependencies]
 debugpy = "^1.8.9"
+pytest = "^7.4.0"
+pytest-cov = "^4.1.0"
+httpx = "^0.25.0"
 
 [build-system]
 requires = ["poetry-core"]
