--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -17,6 +17,7 @@ gunicorn = "^23.0.0"
 redis = "^5.0.0"
 upstash-redis = "^0.15.0"
 sendgrid = "^6.11.0"
+jinja2 = "^3.1.0"
 assignment-logic = {path = "../assignment_logic"}
 
 [tool.poetry.group.dev.dependencies]
