--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,8 @@
   "scripts": {
     "start": "craco start",
     "build": "craco build",
-    "test": "craco test"
+    "test": "craco test",
+    "lint": "eslint src --ext .ts,.tsx --max-warnings 0"
   },
   "eslintConfig": {
     "extends": [
