fix: sliding ttl and health endpoint fix

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -53,12 +53,9 @@ jobs:
             --cpu 4 \
             --timeout 300 \
             --max-instances 10 \
+            --min-instances 0 \
             --set-env-vars "UPSTASH_REDIS_REST_URL=${{ secrets.UPSTASH_REDIS_REST_URL }},UPSTASH_REDIS_REST_TOKEN=${{ secrets.UPSTASH_REDIS_REST_TOKEN }},CORS_ORIGINS=${{ secrets.FRONTEND_URL }},FROM_EMAIL=${{ secrets.FROM_EMAIL }},FRONTEND_URL=${{ secrets.FRONTEND_URL }},SENDGRID_API_KEY=${{ secrets.SENDGRID_API_KEY }}" \
-            --startup-probe-http-get-path=/health \
-            --startup-probe-initial-delay-seconds=10 \
-            --startup-probe-timeout-seconds=3 \
-            --startup-probe-period-seconds=10 \
-            --startup-probe-failure-threshold=3
+            --startup-cpu-boost
 
       - name: Show deployed service URL
         run: |
