--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^12.8.0",
     "immer": "^11.1.3",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
