--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -21,6 +21,7 @@ jinja2 = "^3.1.0"
 slowapi = "^0.1.9"
 firebase-admin = "^6.5.0"
 google-cloud-firestore = "^2.16.0"
+email-validator = "^2.1.0"
 assignment-logic = {path = "../assignment_logic"}
 
 [tool.poetry.group.dev.dependencies]
